# tahanea

./: .cache  .gitignore  2025-01-31-soup-enthusiasm.html  2025-09-13-ocaml-noob.html  404.html  about.html  architecture-and-the-sims.html  dune-project  index.html  index.md  resume.html  style.css  tahanea.opam
.github/workflows/: hum.yml
.target/: 2025-01-31-first.html  2025-01-31-soup-enthusiasm.html  2025-09-13-ocaml-noob.html  2025-10-10-imdbile.html  about.html  index.html  soup-enthusiasm.html
_posts/: 2025-01-31-first.md  2025-01-31-soup-enthusiasm.md  2025-09-13-ocaml-noob.md  2025-10-10-imdbile.md
_sass/minima/: custom-variables.scss  initialize.scss
assets/: main.scss
assets/css/: reset.css  resume.css  style.css  style.scss
assets/templates/: 404tpl.html  article.html  index.html  layout.html  page.html  resume-layout.html  resume.html
content/: 404.md  index.md
content/articles/: 2025-01-31-soup-enthusiasm.md  architecture-and-the-sims.md
content/cv/: resume.md
pages/: 2025-01-31-first.md  about.md  soup-enthusiasm.md
templates/: index.html  layout.html  page.html
